@@ -1,11 +1,14 @@
 # Next
 
-Python 3 (3.6+) is required now. Mpc was dropped as a requirement. Make sure python 3 is installed on your system!
+Python 3 (3.6+) is required now. Mpc was dropped as a requirement. Make sure python3 is available on your system!
 
 - Changes backend from mpc to python-mpd2 (requires python 3.6+)
 - Adds "Don't make me scroll over the same library over and over" shuffle button
 - Fixes Ctrl+F not reliably jumping to search
 - Cleans up and changes some keyboard shortcuts
+- Queue's "Follow Mode" tries to be automagic(tm) and the mode-button was removed from the UI 
+- "L" shortcut always shows the currently playing song in the Queue (and activates Follow Mode again)
+- Provides more keyboard-shortcut hints in the UI
 
 # 5.6.0
 
